github_data_collector/src/data/issue_comment/butor_blackbird.txt
you can use the theater dollar instead of USD
this to favor a faster balance of the excange
Is there a balancing function?
How can you be sure that the buy / sell and sell / buy will be the same amount?  Is it possible that on one exchange I will buy or sell more than on another?  Then I can get stuck with either money or cash and then I lose money.
Will the blackbird support the bitmex?
When I change Demomode=true and run docker-compose up it does exit with code 1.

When looking at the logs it shows this

blackbird_1 | Blackbird is running... (pid 7) blackbird_1 | compose.cli.verbose_proxy.proxy_callable: docker wait <- ('7166aee47fa032ac92beca8ecd15d8a624b3526c5ce5eb4bcb70ffb4dbf81206') compose.cli.verbose_proxy.proxy_callable: docker inspect_container <- ('7166aee47fa032ac92beca8ecd15d8a624b3526c5ce5eb4bcb70ffb4dbf81206') urllib3.connectionpool._make_request: http://localhost:None "POST /v1.22/containers/7166aee47fa032ac92beca8ecd15d8a624b3526c5ce5eb4bcb70ffb4dbf81206/wait HTTP/1.1" 200 30 compose.cli.verbose_proxy.proxy_callable: docker wait -> {'Error': None, 'StatusCode': 1}

 #Any idea why happens only when switching DemoMode off?


While attempting to build on Ubuntu Linux I get the following compilation error

test.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____28()’:
test.cpp:688:11: error: aggregate ‘HMAC_CTX ctx’ has incomplete type and cannot be defined
  HMAC_CTX ctx;
           ^~~
test.cpp:757:2: error: ‘HMAC_CTX_init’ was not declared in this scope
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
test.cpp:757:2: note: suggested alternative: ‘HMAC_CTX_new’
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
  HMAC_CTX_new
test.cpp:777:2: error: ‘HMAC_CTX_cleanup’ was not declared in this scope
  HMAC_CTX_cleanup(&ctx);
  ^~~~~~~~~~~~~~~~
test.cpp:777:2: note: suggested alternative: ‘HMAC_CTX_get_md’
  HMAC_CTX_cleanup(&ctx);
  ^~~~~~~~~~~~~~~~
  HMAC_CTX_get_md
test.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____32()’:
test.cpp:894:11: error: aggregate ‘HMAC_CTX ctx’ has incomplete type and cannot be defined
  HMAC_CTX ctx;
           ^~~
test.cpp:963:2: error: ‘HMAC_CTX_init’ was not declared in this scope
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
test.cpp:963:2: note: suggested alternative: ‘HMAC_CTX_new’
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
  HMAC_CTX_new
test.cpp:987:2: error: ‘HMAC_CTX_cleanup’ was not declared in this scope
  HMAC_CTX_cleanup(&ctx);
  ^~~~~~~~~~~~~~~~
test.cpp:987:2: note: suggested alternative: ‘HMAC_CTX_get_md’
  HMAC_CTX_cleanup(&ctx);
  ^~~~~~~~~~~~~~~~
  HMAC_CTX_get_md
test.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____36()’:
test.cpp:1096:11: error: aggregate ‘HMAC_CTX ctx’ has incomplete type and cannot be defined
  HMAC_CTX ctx;
           ^~~
test.cpp:1166:2: error: ‘HMAC_CTX_init’ was not declared in this scope
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
test.cpp:1166:2: note: suggested alternative: ‘HMAC_CTX_new’
  HMAC_CTX_init(&ctx); // OpenSSL
  ^~~~~~~~~~~~~
  HMAC_CTX_new
test.cpp:1192:2: error: ‘HMAC_CTX_cleanup’ was not declared in this scope
  HMAC_CTX_cleanup(&ctx);
  ^~~~~~~~~~~~~~~~

I have been looking into exchange arbitrage, but it seems like after fees and everything they are all about even. Am I missing something?
Got Blackbird up and running! 

Only set for 2 exchanges: Bitfinex and OKCOIN (tough to move all balances out of my other exchanges to = $25 or can I just move from trade to exchange a/c's?)

BB placed one trade LONG at OKCOIN. And placed one trade SHORT at Bitfinex. Like this:

Date & Time:       02/22/2019 16:10:09
   Exchange Long:     OKCoin (id 1)
   Exchange Short:    Bitfinex (id 0)
   Fees:              15.00% / 0.20%
   Price Long:        3903.76 (target)
   Price Short:       3998.10 (target)
   Spread:            2.42%
   Cash used:         25.00 on each exchange
   Exit Target:       -28.48%

Then I left it alone and shut down BB. With some BTC bought at OKC and one short waiting at Bitfinex.

When I run BB now it looks like: 
OKCoin/Bitfinex:      3.02% [target -28.48%, min  3.02%, max  3.02%]

Instead of looking like similar parameters as before: 
OKCoin/Bitfinex:      2.60% [target  0.80%, min  2.60%, max  2.63%]   

I assume my current run of BB is looking for a new trade unconnected to the first? 

As it stands now it appears BB won't place a trade for a long time if waiting on a target of -28.48% ??

What's up?
Many thanks :)
I'm having trouble getting the build to finish without errors ... I would really appreciate some help as I'm an absolute beginner when it comes to linux.

1. When I run `cmake -B./build -H. -DCMAKE_BUILD_TYPE=Release` I get errors about various variables being missing / undefined. 

![variables_error](https://user-images.githubusercontent.com/46390697/50720133-03e5cd00-10f3-11e9-90af-0e410f9e4b2f.png)

I found these were in the CmakeCache file and tried to manually enter what I thought were correct values.

![cmake_cache_example](https://user-images.githubusercontent.com/46390697/50720162-79519d80-10f3-11e9-9013-6f705b816215.png)

It almost worked but keeps failing with the below error which seems related to the curl paths ???

![curl_build_error](https://user-images.githubusercontent.com/46390697/50720184-d8afad80-10f3-11e9-9804-41e44df51967.png)

I understand that I am supposed to pass these variables in the cmake command but it is not outlined in the installation instructions and I can't work out exactly what they should be ???

I'd appreciate some help getting this running ... I can provide remote putty SSL access if anyone is generous enough to log in and quicky get it working for me.  It is installed on a dedicated and isolated Ubuntu 18 Server VM.

Thanks.


update -----------------------------------------------------------

OK after hours of trial and error this seems to get me 90% of the way

`cmake -DCURL_INCLUDE_DIR=/usr/lib/x86_64-linux-gnu -DJANSSON_INCLUDE_DIR=/usr/local -DOPENSSL_INCLUDE_DIR=/usr/lib/x86_64-linux-gnu/openssl-1.0.0 -DOPENSSL_CRYPTO_LIBRARY=/usr/lib/x86_64-linux-gnu/libcrypto.so.1.0.0 -DOPENSSL_SSL_LIBRARY=/usr/lib/openssl-1.0/libssl.so -B./build -H. -DCMAKE_BUILD_TYPE=Release
`
... BUT I still get this last error ??? Any ideas how to fix ??

![hmac_error](https://user-images.githubusercontent.com/46390697/50721206-54672580-1107-11e9-9ed9-0ac452eccf33.png)



I see no changes or updates. Is this project still alive?
After building blackbird, when I try to run the program, I receive the following error:

MACs-MacBook-Pro:~ mac$ /Users/mac/blackbird/blackbird ; exit;
Blackbird Bitcoin Arbitrage
DISCLAIMER: USE THE SOFTWARE AT YOUR OWN RISK

ERROR: blackbird.conf cannot be open.
logout
Saving session...
...copying shared history...
...saving history...truncating history files...
...completed.

How do I go about addressing this? Thanks in advance!
